# dental-clinic-management-system

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  LICENSE_NOTICE.md  README.md  docker-compose.prod.yml  notes.txt  pyproject.toml  requirements.txt
docs/: deployment.md  legal.md
src/: main.py
src/alembic/: env.py
src/core/: cache.py  config.py  dependencies.py  email_config.py  security.py
src/custom_types/: resend_types.py
src/db/: database.py  rls_policies.py
src/dependencies/: tenant_deps.py
src/middleware/: tenant_middleware.py
src/models/: __init__.py  appointment.py  audit_log.py  auth.py  consultation.py  invoice.py  medical_record.py  newsletter.py  patient.py  patient_sharing.py  prescription.py  service.py  settings.py  tenant.py  treatment.py  treatment_item.py  treatment_template.py  user.py
src/routes/: __init__.py  appointments.py  auth.py  consultations.py  dashboard.py  email.py  invoices.py  medical_records.py  newsletters.py  password_reset.py  patient_assignment.py  patient_sharing.py  patients.py  prescriptions.py  public.py  services.py  sessions.py  settings.py  tenants.py  treatment_templates.py  treatments.py  users.py
src/schemas/: __init__.py  appointment_schemas.py  auth.py  auth_schemas.py  base_schemas.py  consultation_schemas.py  email_schemas.py  invoice_schemas.py  medical_record_schemas.py  newsletter_schemas.py  password_reset_schemas.py  patient_schemas.py  patient_sharing_schemas.py  prescription_schemas.py  response_schemas.py  service_schemas.py  settings.py  tenant_schemas.py  treatment_schemas.py  user_schemas.py
src/scripts/: README.md  check_rls.py  (+4 more)
(+53 files in other folders)
